fix header z-index

--- a/src/pages/header/css/header.css
+++ b/src/pages/header/css/header.css
@@ -14,6 +14,7 @@
 
     scroll-behavior: smooth;
     scrollbar-gutter: both-edges;
+    z-index: 1;
 }
 
 .logo {
